--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "semantic-ui-css/semantic.css";
+
+.team-container{
+    margin-bottom: 1rem;
+  }
+
+  .team-container ul{
+    border: 0.1rem solid rgba(128, 128, 128, 0.418);
+    margin: 0;
+    padding: 0.5rem;
+  }
+
+  li{
+    list-style: none;
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+  }
+  
